<resources>
    <string name="app_name">To-Do List</string>
    <string name="your_tasks">Your Tasks</string>
    <string name="today">Today</string>
    <string name="all">All</string>
    <string name="upcoming">Upcoming</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todos">Todos</string>
    <string name="timer">Timer</string>
    <string name="graph">Graph</string>
    <string name="category">Category</string>
</resources>